tests/unknown_property_in_branch_test/unknown_property_in_branch_test.exp
Error: unknown_property.js:8
  8: if (TypedObj.bing != null) {} // Error
         ^^^^^^^^^^^^^ unknown-property-in-branch-test: Accessing an unknown property here. Did you mean to add `bing` to the type?


Found 1 error
